<resources>
    <string name="app_name">Map o Shame</string>
    <string name="permission_READ">cop4656.jrdbnntt.com.groupproject1.permission.READ_PERMISSION</string>
    <string name="permission_WRITE">cop4656.jrdbnntt.com.groupproject1.permission.WRITE_PERMISSION</string>
    <string name="action_ALARM">cop4656.jrdbnntt.com.groupproject1.action.ALARM</string>
    <string name="view_schedule">View Schedule</string>
    <string name="add_course">Add Course</string>
    <string name="cop3330">COP3330</string>
    <string name="course_name">Course Name:</string>
    <string name="start_time">Start time:</string>
    <string name="time_format">h:mm a</string>
    <string name="day_s">Day(s):</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">TH</string>
    <string name="f">F</string>
    <string name="room_number">Room number:</string>
    <string name="mch201">MCH201</string>
    <string name="add_class">Add class</string>
    <string name="my_preferences">Preferences</string>
    <string name="ACF">Alumni Center Facility</string>
    <string name="AVO">Alumni Village</string>
    <string name="AME">AME Building</string>
    <string name="L52">Anthropology Department - Varsity Plaza</string>
    <string name="MLR">Art Faculty Annex</string>
    <string name="ATL">Art Teaching Labs</string>
    <string name="SLB">Askew Student Life Building</string>
    <string name="VG4">Ausley (Law School)</string>
    <string name="AZL">Azalea Hall</string>
    <string name="BTF">Basketball Training Facility</string>
    <string name="BEL">Bellamy Building</string>
    <string name="L2B">BFA Studios</string>
    <string name="BIO">Biology Unit I</string>
    <string name="BRF">Biomedical Research Facility</string>
    <string name="BSU">Black Student Union</string>
    <string name="CC3">Bloxham Annex A</string>
    <string name="CC4">Bloxham Annex B</string>
    <string name="CC5">Bloxham Annex C</string>
    <string name="BRW">Broward Hall</string>
    <string name="BRY">Bryan Hall</string>
    <string name="BS1">Bus Stop - Academic Way</string>
    <string name="BS2">Bus Stop - Chieftan Way</string>
    <string name="BS3">Bus Stop - Stadium Dr.</string>
    <string name="CWF">Cage Wash Facility</string>
    <string name="VG2">Caldwell (Law School)</string>
    <string name="PG4">Call Street Garage 4</string>
    <string name="MCH">Carothers Hall</string>
    <string name="CAR">Carraway Building</string>
    <string name="CAW">Cawthon Hall</string>
    <string name="L53">Center for Autism</string>
    <string name="MFC">Center for Couple and Family Therapy</string>
    <string name="L50">Center for Human Rights</string>
    <string name="CUP">Central Utilities Plant</string>
    <string name="CC9">Chapman Building</string>
    <string name="CSL">Chemical Sciences Laboratories</string>
    <string name="MSA">College of Medicine Auditorium</string>
    <string name="MSB">College of Medicine Building</string>
    <string name="MSR">College of Medicine Research Building</string>
    <string name="NRB">Collins Research Building</string>
    <string name="CON">Conradi Building</string>
    <string name="VG3">Damon (Law School)</string>
    <string name="RH8">DeGraff East</string>
    <string name="RH9">DeGraff West</string>
    <string name="DEV">Deviney Hall</string>
    <string name="HBS">Dick Howser Stadium</string>
    <string name="DIF">Diffenbaugh Building</string>
    <string name="DSL">Dirac Science Library</string>
    <string name="DLC">Dittmer Chemistry Lab</string>
    <string name="CAM">Doak Campbell Stadium</string>
    <string name="DHA">Dodd Auditorium</string>
    <string name="DOD">Dodd Hall</string>
    <string name="GCC">Don Veller Seminole Golf Course Club</string>
    <string name="DOR">Dorman Hall</string>
    <string name="DSC">Dunlap Success Center</string>
    <string name="SCN">Duxbury Hall (Nursing School)</string>
    <string name="Q1">E.A.P. Facility</string>
    <string name="EHS">EHS Annex</string>
    <string name="ELB">Engineering Lab Building</string>
    <string name="EPS">Eppes Hall</string>
    <string name="CE1">FAMU/FSU College of Engineering Building A</string>
    <string name="CE2">FAMU/FSU College of Engineering Building B</string>
    <string name="FHP">FHP Academy</string>
    <string name="FAA">Fine Arts Annex (Theatre)</string>
    <string name="FAB">Fine Arts Building</string>
    <string name="CC7">Firestone Annex</string>
    <string name="CC6">Firestone Building</string>
    <string name="FLH">Fisher Lecture Hall</string>
    <string name="FSB">Frank Shaw Building</string>
    <string name="AWC">FSU Alumni Association</string>
    <string name="F15">FSU Nursery Greenhouse</string>
    <string name="REZ">FSU Reservation Lakefront Park</string>
    <string name="GZ1">Gazebo at Greek Park</string>
    <string name="GIL">Gilchrist Hall</string>
    <string name="GME">Global and Multicultural Engagement (The Globe)</string>
    <string name="MIL">Harpe-Johnson Building (ROTC)</string>
    <string name="CIR">Haskin Circus Complex</string>
    <string name="HCB">HCB Classroom Building</string>
    <string name="HWC">Health and Wellness Center</string>
    <string name="HEC">Hecht House</string>
    <string name="VG1">Hobby- Harrison/Cawthon (Law School)</string>
    <string name="HTL">Hoffman Teaching Lab</string>
    <string name="HSF">Honors, Scholars and Fellows House</string>
    <string name="HMU">Housewright Music Building</string>
    <string name="IPF">Indoor Practice Facility - Football</string>
    <string name="RMJ">Johnson Building</string>
    <string name="WJB">Johnston Building</string>
    <string name="KLB">Kasha Laboratory Building</string>
    <string name="KEN">Keen Building</string>
    <string name="KRB">Kellogg Research Building</string>
    <string name="ZEB">Kempler Lab</string>
    <string name="KIN">King Life Sciences Building</string>
    <string name="KMU">Kuersteiner Music Building</string>
    <string name="LAN">Landis Hall</string>
    <string name="LLB">Law Library</string>
    <string name="LSR">Law Rotunda</string>
    <string name="SRC">Leach Recreation Center</string>
    <string name="LTO">Library Technical Services</string>
    <string name="LON">Longmire Building</string>
    <string name="LOV">Love Building</string>
    <string name="IFF">Main Campus Fields (Old IM Fields)</string>
    <string name="MCT">Marching Chiefs Tower And Practice Field</string>
    <string name="WH1">Master Craftsman Studio</string>
    <string name="MRB">Materials Research Building</string>
    <string name="EMH">Mccollum Hall</string>
    <string name="TRK">Mcintosh Track and Field Building (Mike Long Track)</string>
    <string name="MMA">Mendenhall Building A</string>
    <string name="MMB">Mendenhall Building B</string>
    <string name="L2A">MFA Studios</string>
    <string name="MJP">Mina Jo Powell Alumni Green</string>
    <string name="MON">Montgomery Gym</string>
    <string name="MAB">Moore Athletic Building</string>
    <string name="TCP">Morcom Aquatics Center</string>
    <string name="HMB">Morgan Building</string>
    <string name="JMH">Murphree Hall</string>
    <string name="MAG">National High Magnetic Field Laboratory</string>
    <string name="NWR">Northwest Regional Data Center</string>
    <string name="OSB">Oceanography/Statistics Building</string>
    <string name="ACT">Oglesby Union - Activities Building</string>
    <string name="CRB">Oglesby Union - Crenshaw Building</string>
    <string name="DAV">Oglesby Union - Davis Building</string>
    <string name="MOR">Oglesby Union - Moore Auditorium</string>
    <string name="UPO">Oglesby Union - Post Office Building</string>
    <string name="TUR">Oglesby Union - Turner Building</string>
    <string name="GCB">Parking Control - University Center</string>
    <string name="PCB">Pepper Building</string>
    <string name="PNR">Presidents House</string>
    <string name="JRC">Printing Services Facility</string>
    <string name="F20">Property Records Warehouse</string>
    <string name="PDA">Psychology Building A</string>
    <string name="PDB">Psychology Building B</string>
    <string name="PBC">Public Broadcast Facility</string>
    <string name="RH1">Ragans Hall 1</string>
    <string name="RH2">Ragans Hall 2</string>
    <string name="RH3">Ragans Hall 3</string>
    <string name="RH4">Ragans Hall 4</string>
    <string name="IM1">Rec SportsPlex East</string>
    <string name="IM4">Rec SportsPlex Tournament Building</string>
    <string name="IM3">Rec SportsPlex West</string>
    <string name="RF1">Research Foundation Bldg. A</string>
    <string name="RF2">Research Foundation Bldg. B</string>
    <string name="REY">Reynolds Hall</string>
    <string name="UPL">Richards Building</string>
    <string name="LRB">Ridgeway Building</string>
    <string name="LAW">Roberts Hall (Law School)</string>
    <string name="ROG">Rogers Hall</string>
    <string name="RBA">Rovetta Business Building A</string>
    <string name="RBB">Rovetta Business Building B</string>
    <string name="SAL">Salley Hall</string>
    <string name="SAN">Sandels Building</string>
    <string name="RSF">Seminole Dining Offices</string>
    <string name="RSB">Shaw Building (Telecommunications)</string>
    <string name="LSB">Shores Building</string>
    <string name="BFS">Sliger Building</string>
    <string name="SST">Speicher Tennis Center</string>
    <string name="PG3">Spirit Way Garage 3</string>
    <string name="PG5">St. Augustine Garage 5</string>
    <string name="L45">Stadium Place - Training Center</string>
    <string name="SEC">Stavros Center</string>
    <string name="SSO">Stiles / Smith Team Building</string>
    <string name="STB">Stone Building</string>
    <string name="LIB">Strozier Library</string>
    <string name="SSB">Student Services Building</string>
    <string name="PSF">Tanner Hall (FSU Police Department)</string>
    <string name="TSB">Technology Services Building</string>
    <string name="MEF">Tennis / Multipurpose Educational Facility</string>
    <string name="THC">Thagard Health Center</string>
    <string name="TLA">The Lab - Building A</string>
    <string name="TLB">The Lab - Building B</string>
    <string name="RH7">Traditions Hall</string>
    <string name="PG2">Traditions Way Garage 2</string>
    <string name="TUL">Tully Gym</string>
    <string name="TC">Turnbull Conference Center</string>
    <string name="UCA">University Center - Building A</string>
    <string name="UCB">University Center - Building B (Visitor Information Center)</string>
    <string name="UCC">University Center - Building C</string>
    <string name="UCD">University Center - Building D</string>
    <string name="GG2">University Center Bus Stop</string>
    <string name="CC1">Warren Building</string>
    <string name="WES">Westcott Building (Ruby Diamond Auditorium)</string>
    <string name="WVI">Westcott Welcome Center - Visitor Information</string>
    <string name="WCP">Westside Courts</string>
    <string name="RH5">Wildwood Hall A</string>
    <string name="RH6">Wildwood Hall B</string>
    <string name="WMS">Williams Building</string>
    <string name="CC2">Winchester Building</string>
    <string name="SCO">Womens Soccer</string>
    <string name="SOF">Womens Softball</string>
    <string name="PG1">Woodward Avenue Garage 1</string>
    <string name="navigate">Navigate</string>
    <string name="preferences">Preferences</string>
    <string name="schedule">Course Schedule</string>
    <string name="placeholder_time">12:00 AM</string>
    <string name="placeholder_days">MoTuWeThFr</string>
    <string name="save">Save</string>
    <string name="courses">Courses:</string>
    <string name="today_s_classes"><u>Today\'s Classes</u></string>
    <string name="view_full_schedule">View Full Schedule</string>
    <string name="title_activity_shame">ShameActivity</string>
</resources>