<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/courseT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/courseNum"
        android:layout_alignBottom="@+id/courseNum"
        android:layout_alignStart="@+id/start"
        android:text="@string/course_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/courseNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/cop3330"
        android:inputType="textCapWords"
        android:layout_below="@+id/add"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/start_time"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginStart="17dp"
        android:layout_below="@+id/courseNum"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/startT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start"
        android:layout_alignBottom="@+id/start"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/time_format"
        android:inputType="text" />


    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/day_s"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/startT"
        android:layout_alignStart="@+id/start" />

    <CheckBox
        android:id="@+id/mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m"
        android:layout_alignBaseline="@+id/days"
        android:layout_alignBottom="@+id/days"
        android:layout_toEndOf="@+id/days" />

    <CheckBox
        android:id="@+id/tues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mon"
        android:layout_toEndOf="@+id/mon"
        android:text="@string/t" />

    <CheckBox
        android:id="@+id/wen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tues"
        android:layout_toEndOf="@+id/tues"
        android:text="@string/w" />

    <CheckBox
        android:id="@+id/thur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th"
        android:layout_alignBaseline="@+id/wen"
        android:layout_alignBottom="@+id/wen"
        android:layout_toEndOf="@+id/wen" />

    <CheckBox
        android:id="@+id/fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f"
        android:layout_alignTop="@+id/days"
        android:layout_toEndOf="@+id/thur" />

    <TextView
        android:id="@+id/roomNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/room_number"
        android:layout_below="@+id/fri"
        android:layout_alignStart="@+id/days" />

    <EditText
        android:id="@+id/roomNumT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/roomNum"
        android:layout_alignBottom="@+id/roomNum"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/mch201"
        android:inputType="textCapCharacters" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical" />


</RelativeLayout>