<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Invisible data placeholder -->
    <TextView
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/tvCourseId"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/course_name"
        android:textSize="24sp" />

    <TextView
        android:text="@string/MCH"
        android:id="@+id/tvRoom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/tvCourseName"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder_time"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvStartTime"
        android:text="@string/placeholder_days" />


</RelativeLayout>